--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,7 +3,8 @@
   <% @lists.each do |list| %>
   <div class="col-12 col-sm-6 col-md-4 mb-3">
     <%= link_to list_path(list), class: "text-decoration-none" do %>
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1513106580091-1d82408b8cd6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1176&q=80)">
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%=image_cloudinary(list)%>)">
+      <%# o image_cloudinary está no helpers/lists_helper para poder ser chamado em vários forms %>
         <%= list.name %>
       </div>
     <% end %>
